fix bug: unreadable icon with dark theme
https://github.com/juliushaertl/apporder/issues/83

--- a/css/apporder.css
+++ b/css/apporder.css
@@ -18,7 +18,10 @@
 	filter: progid:DXImageTransform.Microsoft.BasicImage(invert='1');
 	opacity: .7;
 }
-
+.dark #appsorter img {
+	-webkit-filter: invert(0);
+	filter: invert(0);
+}
 #appsorter .placeholder {
 	border: 1px dashed #aaaaaa;
 	visibility: visible;
